# solar-estimates

./: .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  environment.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.sh  sitemap.xml
about/: index.html
src/: .gitignore  README.md  environment.yml  example.py  grass_utils.py  model.sql  pipeline.py  pyproject.toml  qtown.py  schema.sql  solar_irradiance.py
src/data/inputs/DSM/MolesworthStation/: new-zealand-lidar-1m-dsm.txt
src/data/inputs/DSM/suburb_MolesworthStation/: Molesworth_1m_DSM.tif.aux.xml
src/data/inputs/DSM/suburb_ShotoverCountry/: DSM_CC11_2021_1000_0329.tif  DSM_CC11_2021_1000_0331.aux  DSM_CC11_2021_1000_0331.tfw  DSM_CC11_2021_1000_0332.tif  DSM_CC11_2021_1000_0333.tif.aux.xml  DSM_CC11_2021_1000_0334.tif  DSM_CC11_2021_1000_0429.aux  DSM_CC11_2021_1000_0429.tfw  DSM_CC11_2021_1000_0429.tif  DSM_CC11_2021_1000_0430.aux  DSM_CC11_2021_1000_0430.tif.aux.xml  DSM_CC11_2021_1000_0431.aux  DSM_CC11_2021_1000_0431.tfw  DSM_CC11_2021_1000_0431.xml  DSM_CC11_2021_1000_0432.aux  DSM_CC11_2021_1000_0432.tfw  DSM_CC11_2021_1000_0433.tfw  DSM_CC11_2021_1000_0433.tif  DSM_CC11_2021_1000_0434.tif.aux.xml  DSM_CC11_2021_1000_0529.aux  DSM_CC11_2021_1000_0529.tif.aux.xml  DSM_CC11_2021_1000_0531.aux  DSM_CC11_2021_1000_0532.aux  (+2 more)
src/data/inputs/Molesworth/: README.md  README.txt
src/data/inputs/weather/: .gitignore
src/data/shotover_country/: DSM_CC11_2021_1000_0329.tif.aux.xml  DSM_CC11_2021_1000_0330.aux  DSM_CC11_2021_1000_0330.tif.aux.xml  DSM_CC11_2021_1000_0331.tif  DSM_CC11_2021_1000_0331.tif.aux.xml  DSM_CC11_2021_1000_0332.aux  DSM_CC11_2021_1000_0332.tfw  DSM_CC11_2021_1000_0429.tif.aux.xml  DSM_CC11_2021_1000_0433.tif.aux.xml  DSM_CC11_2021_1000_0434.tfw  DSM_CC11_2021_1000_0434.tif  DSM_CC11_2021_1000_0529.tfw  DSM_CC11_2021_1000_0531.tfw  DSM_CC11_2021_1000_0531.tif.aux.xml  DSM_CC11_2021_1000_0532.tif.aux.xml
src/lib/: building_outlines.py  dsm.py  grass_utils.py  linke.py  solar_irradiance.py  stats.py
src/utils/: building_outlines.py  diagnostics.py  dsm.py  grass_utils.py  linke.py  logging_config.py  misc.py  solar_irradiance.py  stats.py  wrf.py
(+96 files in other folders)
