[project]
name = "solar-estimates"
version = "0.1.0"
description = ""
license = {text = "MIT License"}
readme = "docs/index.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3,<3.0.0",
    "matplotlib (>=3.10.7,<4.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "ruff (>=0.14.3,<0.15.0)",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.1.1,<2.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

