[project]
name = "solar-estimates"
version = "0.1.0"
description = "Tools to estimate solar potential for New Zealand"
readme = "README.md"
requires-python = ">=3.12" # Ubuntu LTS 24.04 doesn't support 3.13
dependencies = [
    "gdal>=3.11.4",
    "h5netcdf>=1.7.3",
    "rioxarray>=0.20.0",
    "gdal==3.11.4", # For Ubuntu LTS 24.04, need to lock to this version, and not go to 3.12
    "scipy>=1.16.2",
    "xarray>=2025.10.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["data*", "grassdata*", "venv*", ".venv*"]
